fix spacing on post list

--- a/assets/css/_patches.scss
+++ b/assets/css/_patches.scss
@@ -25,3 +25,11 @@
     background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0) 50%,$captionColour 50%);
   }
 }
+
+.list--posts {
+  .item--post {
+    .article {
+      @include baseline($fontsize: zeta, $font: $bodytype, $lineheight: 2, $below: 2, $breakpoint: all);
+    }
+  }
+}
